--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-This paper uses the angular power spectrum of luminous red galaxies selected from the Dark Energy Spectroscopic Instrument (DESI) imaging surveys to probe local primordial non-Gaussianity (PNG). The FFTLog algorithm is applied to enable modeling the angular power spectrum on large scales. Linear multivariate regression and artificial neural networks are applied to alleviate excess clustering signals caused by varying survey conditions such as depth, extinction, and astronomical seeing. Feature selection and cross-correlation techniques are implemented to find various levels of systematic mitigation ranging from conservative to extreme. Assuming that only halo mass determines halo occupation, we find $36.08(25.03) < \fnl < 61.44(75.64)$ and $13.10(-15.96) < \fnl < 69.14(91.84)$ at $68\%$($95\%$) confidence, respectively, with our conservative and rigorous methods. The methods are tested and calibrated rigorously against lognormal density simulations with $\fnl=0$ and $76.9$, and realistic systematic effects included. When tested against the simulations without systematics, significant issues are observed regarding photometric calibration in the South Galactic Cap below DEC$=-30$ and stellar contamination in the North Galactic Cap. Assuming Planck's measurement is accurate a priori, our results provide evidence for some unknown calibration or stellar contamination issues. While more theoretical work and simulations are required to better understand halo assembly bias, our results motivate followup studies of local PNG and observational systematics with DESI spectroscopic samples, which are less prone to calibration and contamination issues.
+This paper uses the angular power spectrum of luminous red galaxies selected from the Dark Energy Spectroscopic Instrument (DESI) imaging surveys to probe local primordial non-Gaussianity (PNG). The FFTLog algorithm is employed to enable modeling the angular power spectrum on large scales. Linear multivariate regression and artificial neural networks are applied to alleviate excess clustering signals caused by varying survey conditions such as depth, extinction, and astronomical seeing. Feature selection and cross-correlation techniques are implemented to find various levels of systematic mitigation ranging from conservative to extreme. Assuming that only halo mass determines halo occupation, we find $36.08(25.03) < \fnl < 61.44(75.64)$ and $13.10(-15.96) < \fnl < 69.14(91.84)$ at $68\%$($95\%$) confidence, respectively, with our conservative and \mr{extreme} methods. The methods are tested and calibrated rigorously against lognormal density simulations with $\fnl=0$ and $76.9$, and realistic systematic effects included. When tested against the simulations without systematics, significant issues are observed regarding photometric calibration in the South Galactic Cap below DEC $= -30$ and stellar contamination in the North Galactic Cap. Assuming Planck's measurement is accurate a priori, \mr{our best fit estimates of $\fnl \sim 47-50$} provide evidence for some unknown calibration or stellar contamination issues \mr{which cannot be addressed with available imaging maps}. While more theoretical work and simulations are required to better understand halo assembly bias, our results motivate followup studies of local PNG and observational systematics with DESI spectroscopic samples, which are less prone to calibration and contamination issues.
 \end{abstract}
