--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -4,16 +4,15 @@ Cosmological observations support the paradigm of inflation in which the univers
 \begin{equation}
  \Phi = \phi + \fnl [\phi^{2} - <\phi^{2}>],
 \end{equation}
-where $\fnl$ is a nonlinear coupling constant and $\phi$ is assumed to be a Gaussian random field. Local-type PNG generates a primordial bispectrum, which peaks in the squeezed limit. It alters the local number density of galaxies by coupling the long and small wavelength modes of the dark matter gravitational field, and consequently, it induces a very distinct scale-dependent bias \citep{dalal2008imprints}. 
+where $\fnl$ is a nonlinear coupling constant and $\phi$ is assumed to be a Gaussian random field. Local-type PNG generates a primordial bispectrum, which peaks in the squeezed limit. It alters the local number density of galaxies by coupling the long and small wavelength modes of the dark matter gravitational field, and consequently, it induces a distinct scale-dependent bias which can be used to constrain $\fnl$ using two-point clustering statistics \citep{dalal2008imprints}. 
 
+Various models of inflation predict different values for $\fnl$. Standard slow-roll inflation predicts $\fnl \sim 10^{-2}$, while multi-field inflationary scenarios anticipate considerably larger values \citep[see, e.g.,][]{alvarez2014arXiv1412.4671A, de2017next}. Measuring the scale dependent bias can constrain $\fnl$, and getting robust constraints on this parameter is the first stepping stone toward better understanding the dynamics of the early universe. The current tightest bound on $\fnl$ comes from Planck's bispectrum measurement of CMB anisotropies, $\fnl=0.9\pm 5.0$ \citep{akrami2019planck}. Limited by cosmic variance, CMB data alone cannot enhance statistical precision of $\fnl$ measurements enough to break the degeneracy amongst various inflationary paradigms \citep[see, e.g.,][]{ade2019simons}. However, combining CMB with LSS data could cancel cosmic variance, partially if not completely, and improve these numbers significantly to $\sigma(\fnl) \sim 1$ \citep[see, e.g.,][]{schmittfull2018PhRvD}. Also, constraining $\fnl$ with the three-point clustering of LSS is hindered by nonlinearities raised from structure formation, which is non-trivial to model and disentangle from the primordial signal \citep{baldauf2011galaxy, baldauf2011primordial}. As a novel approach, UV Luminosity Function probes galaxy abundances and structure formation on small scales (e.g., $k \sim 2~{\rm Mpc}^{-1}$), which are otherwise impossible to explore with the scale-dependent bias. \cite{sabti2021JCAP} used UV Luminosity Function from the Hubble Space Telescope catalogs \citep{bouwens2015ApJ} to find a $2\sigma$ bound of $-166<\fnl<497$. Even though this approach is still not competitive with the current bounds from CMB and LSS, upcoming surveys such as the James Webb Space Telescope and the Nancy Grace Roman Space Telescope are forecast to yield up to four times improvements on $
+\fnl$ constraints from UV Luminosity Function. Given these observational and theoretical challenges, the scale-dependent bias technique is the smoking gun for constraining local PNG with LSS. From theoretical point of view, further simulation-based studies of halo-assembly bias are required to fully utilize the scale-dependent bias \citep{2020JCAP...12..013B, 2020JCAP...12..031B, 2022JCAP...11..013B, 2023JCAP...01..023L}. Nevertheless, the current best $\fnl$ constraints from LSS reach $\sigma(\fnl) \sim 20-30$, and most of the constraining power comes from the two point statistics utilizing the scale-dependent bias rather than higher order statistics \citep{2019JCAP...09..010C, mueller2022primordial, 2022PhRvD.106d3506C, 2022arXiv220111518D}.
 
-Getting robust constraints on parameter $\fnl$ is the first stepping stone toward better understanding the dynamics of the early universe. Standard slow-roll inflation predicts $\fnl \sim 10^{-2}$ \citep[see, e.g.,][for a review]{alvarez2014arXiv1412.4671A}, while multi-field inflationary scenarios anticipate considerably larger values \citep[see, e.g.,][]{de2017next}. The current tightest bound on $\fnl$ comes from Planck's bispectrum measurement of CMB anisotropies, $\fnl=0.9\pm 5.0$ \citep{akrami2019planck}. Limited by cosmic variance, CMB data alone cannot enhance statistical precision of $\fnl$ measurements enough to break the degeneracy amongst various inflationary paradigms \citep[see, e.g.,][]{ade2019simons}. However, combining CMB with LSS data could cancel cosmic variance, partially if not completely, and improve these numbers significantly to $\sigma(\fnl) \sim 1$ \citep[see, e.g.,][]{schmittfull2018PhRvD}. Also, constraining $\fnl$ with the three-point clustering of LSS is hindered by nonlinearities raised from structure formation, which is non-trivial to model and disentangle from the primordial signal \citep{baldauf2011galaxy, baldauf2011primordial}. As a novel approach, UV Luminosity Function probes galaxy abundances and structure formation on small scales (e.g., $k \sim 2~{\rm Mpc}^{-1}$), which are otherwise impossible to explore with the scale-dependent bias. \cite{sabti2021JCAP} used UV Luminosity Function from the Hubble Space Telescope catalogs \citep{bouwens2015ApJ} to find a $2\sigma$ bound of $-166<\fnl<497$. Even though this is still not competitive with the current bounds from CMB and LSS, upcoming surveys such as the James Webb Space Telescope and the Nancy Grace Roman Space Telescope are forecast to yield up to four times improvements on $
-\fnl$ constraints from UV Luminosity Function. Given these observational limitations and theoretical challenges, the scale-dependent bias technique is the smoking gun for constraining local PNG with LSS. From theoretical point of view, further simulation-based studies of halo-assembly bias are required to fully utilize the scale-dependent bias \citep{2020JCAP...12..013B, 2020JCAP...12..031B, 2022JCAP...11..013B, 2023JCAP...01..023L}. Nevertheless, the current best $\fnl$ constraints from LSS achieve $\sigma(\fnl) \sim 20-30$, and most of the constraining power comes from the two point statistics utilizing the scale-dependent bias rather than higher order statistics \citep{2019JCAP...09..010C, mueller2022primordial, 2022PhRvD.106d3506C, 2022arXiv220111518D}.
-
-In spite of theoretical challenges, measuring $\fnl$ with the scale-dependent bias effect is nonetheless incredibly challenging due to various systematic effects that modulate clustering power on large scales, where the primordial signal is sensitive. For instance, survey geometry mixes clustering power on different angular scales \citep{beutler2014clustering,wilson2017rapid}. Relativistic effects also generate PNG-like scale-dependent signatures on large scales, which interfere with measuring $\fnl$ with the scale-dependent bias effect \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than survey size, known as super-sample modes, modulate galaxy power spectrum \citep{castorina2020JCAP}. Another source for systematic error is raised because the mean galaxy density for constructing the density contrast field is estimated from data directly rather than being known a priori. This integral constraint effect pushes clustering power on modes near survey size to zero \citep{peacock1991large,de2019integral}. Accounting for these theoretical systematic effects in the galaxy power spectrum is crucial to obtain unbiased inference \citep[see, e.g.,][]{riquelme2022primordial}. Other observational systematics are driven by varying photometric conditions across the sky \citep{ross2011} and photometric calibration issues that manifest as spurious fluctuations in the observed density field of galaxies \citep{huterer2013calibration}. This type of systematic error is much more complicated to mitigate, compared to integral constraint and survey geometry, and it has hampered previous studies of local PNG with the scale-dependent bias effect \citep[see, e.g.,][]{pullen2013systematic, Ho2015JCAP...05..040H}. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to the Galactic plane and attempt to implement more relaxed selection criteria to include fainter galaxies \citep[see, e.g,][]{kitanidis2020imaging}. 
+In addition to the theoretical challenges, measuring $\fnl$ with the scale-dependent bias effect is nonetheless incredibly challenging due to various systematic effects that modulate clustering power on large scales, where the primordial signal is sensitive. For instance, survey geometry mixes clustering power on different angular scales \citep{beutler2014clustering,wilson2017rapid}. Relativistic effects also generate PNG-like scale-dependent signatures on large scales, which interfere with measuring $\fnl$ with the scale-dependent bias effect \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than survey size, known as super-sample modes, modulate galaxy power spectrum \citep{castorina2020JCAP}. In a similar way, the peculiar motion of the observer can mimic a PNG-like scale-dependent signature through aberration, magnification and the Kaiser-Rocket effect, i.e., a systematic dipolar apparent blue-shifting in the direction of the observer's peculiar motion \citep{2021JCAP...11..027B}. However, acting radially, this effect is subdominant in angular clustering measurements. Another source for systematic error is raised because the mean galaxy density for constructing the density contrast field is estimated from data directly rather than being known a priori. This integral constraint effect pushes clustering power on modes near survey size to zero \citep{peacock1991large,de2019integral}. Accounting for these theoretical systematic effects in the galaxy power spectrum is crucial to obtain unbiased inference \citep[see, e.g.,][]{riquelme2022primordial}. Other observational systematics are driven by varying imaging conditions across the sky \citep{ross2011} and photometric calibration issues in data reduction that appear as spurious fluctuations in the observed density field of galaxies \citep{huterer2013calibration}. This type of systematic error is much more complicated to mitigate, compared to integral constraint and survey geometry, and it has hampered previous studies of local PNG with the scale-dependent bias effect \citep[see, e.g.,][]{pullen2013systematic, Ho2015JCAP...05..040H}. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to Galactic plane and attempt to implement more relaxed selection criteria to include fainter galaxies \citep[see, e.g,][]{kitanidis2020imaging}. 
  
-As an ongoing wide-area galaxy survey, the Dark Energy Spectroscopic Instrument (DESI) uses $5000$ robotically-driven fibers to simultaneously collect spectra. DESI is designed to deliver an unparalleled volume of spectroscopic data over its five year mission that will deepen our understanding of the equation of state for dark energy \citep{aghamousa2016desi}. Assuming systematic errors are under control, DESI has the potential to provide competitive constraints on local PNG with $\sigma(\fnl)=5$ \citep{aghamousa2016desi}. Unprecedented precision with $\sigma (\fnl) \sim 1$ can be achieved by combining datasets from DESI and other upcoming surveys, such as Rubin Observatory and SphereX \citep[see, e.g.,][]{Heinrich2022AAS...24020203H}.
+As an ongoing wide-area galaxy survey, the Dark Energy Spectroscopic Instrument (DESI) uses $5000$ robotically-driven fibers to simultaneously collect spectra. DESI is designed to deliver an unparalleled volume of spectroscopic data over its five year mission that will deepen our understanding of the equation of state for dark energy \citep{aghamousa2016desi}. Assuming systematic errors are under control, DESI has the potential to provide competitive constraints on local PNG with $\sigma(\fnl)=5$ \citep{aghamousa2016desi}. Combining DESI with other upcoming surveys, such as Rubin Observatory and SphereX, can unlock unprecedented precision with $\sigma (\fnl) \sim 1$ \citep[see, e.g.,][]{Heinrich2022AAS...24020203H}.
  
-The purpose of this paper is to probe local PNG using the scale-dependent bias signature in the angular power spectrum of luminous red galaxies selected from DESI imaging data. Linear multivariate regression and neural networks are applied to clean and prepare our sample for such a delicate signal. Our results are validated against suites of lognormal simulations with $\fnl=0$ and $76.9$, and potential sources of systematic error such as survey depth, astronomical seeing, photometric calibration, Milky Way extinction, and local stellar density. A particular objective is to quantify the sensitivity of $\fnl$ signal to various treatment methods. The cross power spectra between the galaxy density and imaging property maps are calculated to evaluate the effectiveness of different strategies for cleaning contaminations and to characterize the significance level of remaining systematic error. 
+The objective of this paper is to probe local PNG using the scale-dependent bias signature in the angular power spectrum of luminous red galaxies selected from DESI imaging data. With an emphasis on imaging systematic treatment, this work will pave the path for $\fnl$ studies with DESI spectroscopy. Linear multivariate regression and neural networks are applied to clean and prepare our sample for such a delicate signal. Our results are validated against suites of lognormal simulations with $\fnl=0$ and $76.9$, and potential sources of systematic error such as survey depth, astronomical seeing, photometric calibration, Milky Way extinction, and local stellar density. A particular objective is to quantify the sensitivity of $\fnl$ signal to various treatment methods. The cross power spectra between the galaxy density and imaging property maps are calculated to evaluate the effectiveness of different strategies for cleaning contaminations and to characterize the significance level of remaining systematic error. 
 
 This paper is structured as follows. Section \ref{sec:data} describes the galaxy sample from DESI imaging and lognormal simulations with, or without, PNG and synthetic systematic effects. Section \ref{sec:method} outlines the theoretical framework for modeling the angular power spectrum, strategies for handling various observational and theoretical systematic effects, and statistical techniques for measuring the significance of remaining systematics in our sample after mitigation. Our results are presented in Section \ref{sec:results}, and Section \ref{sec:conclusion} summarizes our conclusions and directions for future work.
