--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -10,7 +10,7 @@ by decomposing it into spherical harmonics, $Y_{\ell m}$,
 \begin{equation}
         a_{\ell m} = \int d\Omega ~ \delta_{g} W Y^{*}_{\ell m},
 \end{equation}
-where $\overline{\rho}$ is the mean galaxy density (estimated from the data) and $W$ is the survey window  (estimated from the randoms). The angular power spectrum is estimated by ,
+where $\overline{\rho}$ is the mean galaxy density (\mr{estimated from the entire LRG sample\footnote{Unless the power spectrum from each region is measured and fit separately for robustness tests.}}) and $W$ is the survey window  (estimated from the randoms). The angular power spectrum is estimated by ,
 \begin{equation}\label{eq:pusedocell}
         \tilde{C}_{\ell} = \frac{1}{2\ell +1} \sum_{m=-\ell}^{\ell} |a_{\ell m}|^{2}.
 \end{equation}
@@ -24,17 +24,17 @@ The projected angular power spectrum of galaxies is related to the 3D power spec
 \begin{equation}\label{eq:cell}
     C_{\ell} = \frac{2}{\pi}\int_{0}^{\infty}\frac{dk}{k}k^{3}P(k)|\Delta_{\ell}(k)|^{2} + N_{\rm shot},
 \end{equation}
-where $N_{\rm shot}$ is assumed to scale-independent, and $\Delta_{\ell}(k) = \Delta^{\rm g}_{\ell}(k) + \Delta^{\rm RSD}_{\ell}(k)$ is the projection kernel which includes redshift space distortions and determines how much each wavenumber $k$ contributes to the $\ell$-mode power. $\Delta_{\ell}(k)$ is computed by integrating over the $l^{\rm th}$ order spherical Bessel functions, $ j_{\ell}(kr)$, and its second derivatives,
+where $N_{\rm shot}$ is assumed to \bbk{be} scale-independent, and $\Delta_{\ell}(k) = \Delta^{\rm g}_{\ell}(k) + \Delta^{\rm RSD}_{\ell}(k)$ is the projection kernel which includes redshift space distortions and determines how much each wavenumber $k$ contributes to the $\ell$-mode power. $\Delta_{\ell}(k)$ is computed by integrating over the $l^{\rm th}$ order spherical Bessel functions, $ j_{\ell}(kr)$, and its second derivatives,
 \begin{align}
     \Delta^{\rm g}_{\ell}(k) &= \int \frac{dr}{r} r b(k, z) D(r) \frac{dN}{dr} j_{\ell}(kr),\\
     \Delta^{\rm RSD}_{\ell}(k) &= - \int \frac{dr}{r} r f(r) D(r) \frac{dN}{dr} j^{\prime\prime}_{\ell}(kr),
 \end{align}
-where $D(z)$ represents the linear growth factor scaled as $D(z=0)=1$, $f(r)$ is the growth rate, and $dN/dr$ is the normalized redshift distribution of galaxies\footnote{$dN/dr = (dN/dz)*(dz/dr) \propto (dN/dz)*H(z)$} (Figure \ref{fig:nz}). The galaxy bias, $b(k,z)$, is given by the redshift dependent linear bias (Figure \ref{fig:nz}) and the PNG-induced shift \citep{slosar2008constraints},
+where $D(z)$ represents the linear growth factor scaled as $D(z=0)=1$, $f(r)$ is the growth rate, and $dN/dr$ is the normalized redshift distribution of galaxies\footnote{$dN/dr = (dN/dz)*(dz/dr) \propto (dN/dz)*H(z)$} ( solid curve in Figure \ref{fig:nz}). The galaxy bias, $b(k,z)$, is given by the redshift dependent linear bias (dashed curve in Figure \ref{fig:nz}) and the PNG-induced shift \citep{slosar2008constraints},
 \begin{equation}
-b(k, z) = b(z) + 3 (b(z) - p) \fnl \frac{\delta_{c} \Omega_{m} H^{2}_{0}}{k^{2}T(k)D(z) c^{2}} \frac{g(\infty)}{g(0)},
+b(k, z) = b(z) + b_{\phi}(z) \fnl \frac{3 \Omega_{m} H^{2}_{0}}{2 k^{2}T(k)D(z) c^{2}} \frac{g(\infty)}{g(0)},
+\label{eq:scaledepbias}
 \end{equation}
-where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{Because $k$ is in unit of $h/{\rm Mpc}$, $H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$}, $T(k)$ is the transfer function, $\delta_{c}=1.686$ represents the critical density for spherical collapse \citep{fillmore1984self}, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ \mr{(see, e.g., Mueller et al 2018)}. The parameter $p$ is a correction due to galaxy selection
-beyond a Poisson sampling of the haloes of a given mass; if only mass determines how galaxies populate a halo, $p=1$, which is often referred to as the universality of the halo occupation distribution \citep[see, e.g.,][]{slosar2008constraints}. However, numerical simulations indicate that the halo occupation distribution for other tracers, e.g., quasars, which are from recent mergers, could depend on other properties besides mass, and thus $p$ can take different values. The theoretical uncertainty on $p$ is not very well constrained, and \cite{2022JCAP...11..013B} showed that marginalizing over this parameter even with wide priors leads to biased constraints because of parameter space projection effects. \cite{2023JCAP...01..023L} used N-body simulations to investigate secondary halo properties such as concentration, spin and sphericity of haloes, and found that halo spin and sphericity preserve the universality of the halo occupation function while halo concentration significantly alters the halo function. Without better-informed priors on $p$, it is argued that the scale-dependent bias effect can only  be used to constrain the $p\fnl$ term \citep[see, e.g.,][]{2020JCAP...12..013B, 2020JCAP...12..031B}. Nevertheless, the significance of detection of nonzero PNG is not affected by different assumptions on $p$, i.e., a nonzero detection of $p\fnl$ will still imply a nonzero detection of $\fnl$. This paper is focused on how a careful treatment of imaging systematic effects, or lack thereof, can bias our PNG constraints. Therefore, we choose $p=1$ for our sample of DESI-like LRGs. We use the FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \cite{fang2020beyond} to handle the Bessel function integrals. Next, we explain the corrections for the effects of survey geometry.
+where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{$H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$ and $k$ is in unit of $h {\rm Mpc}^{-1}$}, $T(k)$ is the transfer function, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ \mr{(see, e.g., Mueller et al 2018)}. \mr{The bias parameter $b_{\phi}$ describes the response of galaxy formation to primordial potential perturbations in the presence of local PNG. Assuming that only mass determines the halo occupation function, $b_{\phi} = 2 \delta_{c}(b - p)$, where $p=1$ and $\delta_{c}= 1.686$ is the critical density for spherical collapse \citep{fillmore1984self}.} The theoretical uncertainty on $p$ is not very well constrained, and \cite{2022JCAP...11..013B} showed that marginalizing over this parameter even with wide priors leads to biased constraints because of parameter space projection effects. \cite{2023JCAP...01..023L} used N-body simulations to investigate secondary halo properties such as concentration, spin and sphericity of haloes, and found that halo spin and sphericity preserve the universality of the halo occupation function while halo concentration significantly alters the halo function. Without better-informed priors on $p$, it is argued that the scale-dependent bias effect can only  be used to constrain the \mr{$b_{\phi}\fnl$} term \citep[see, e.g.,][]{2020JCAP...12..013B, 2020JCAP...12..031B}. Nevertheless, the significance of detection of nonzero PNG is not affected by different assumptions on $p$, i.e., a nonzero detection of \mr{$b_{\phi}\fnl$} will still imply a nonzero detection of $\fnl$. This paper is focused on how a careful treatment of imaging systematic effects, or lack thereof, can bias our PNG constraints. Therefore, we choose $p=1$ for our sample of DESI-like LRGs. We use the FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \cite{fang2020beyond} to handle the Bessel function integrals. Next, we explain the corrections for the effects of survey geometry.
 
 
 \subsubsection{Survey geometry and integral constraint}
@@ -42,15 +42,15 @@ The ensemble average for the partial sky power spectrum is related to that of th
 \begin{equation}\label{eq:mixm}
     <\tilde{C}_{\ell}> = \sum_{\ell^{\prime}} M_{\ell \ell^{\prime}}<C_{\ell^{\prime}}>.
 \end{equation}
-In general, $M_{\ell \ell^{\prime}}$ is singular for a large footprint, but a common technique to remedy this issue is to use a discrete set of $\ell$ bins and assume that the angular power spectrum is constant in each bin. We following a similar approach to \cite{chon2004fast} to do the convolution in Equation \ref{eq:mixm}; The theoretical galaxy power spectrum $C_{\ell}$ is convolved with the survey mask power spectrum to obtain the expected pseudo-power spectrum. The convolution in the spherical harmonics space becomes a multiplication in the correlation function space. First, we obtain the survey mask paircount, and multiply it by the model correlation function. Then, the model pseudo-power spectrum is given by,
+In general, $M_{\ell \ell^{\prime}}$ is singular for a large footprint, but a common technique to remedy this issue is to use a discrete set of $\ell$ bins and assume that the angular power spectrum is constant in each bin. We follow\bbk{\sout{ing}} a similar approach to \cite{chon2004fast} to do the convolution in Equation \ref{eq:mixm}; The theoretical galaxy power spectrum $C_{\ell}$ is convolved with the survey mask power spectrum to obtain the expected pseudo-power spectrum. The convolution in the spherical harmonics space becomes a multiplication in the correlation function space. First, we obtain the survey mask paircount, and multiply it by the model correlation function. Then, the model pseudo-power spectrum is given by,
 \begin{align}
     \tilde{C}^{\rm model}_{\ell} &= 2\pi \int \hat{\omega}^{\rm model}\hat{\omega}^{\rm mask}~P_{\ell}(\cos \theta) d\theta.
 \end{align}
 
  \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{model_mock.pdf}
-\caption{The mean power spectrum from the $\fnl=0$ mocks and best fit theoretical prediction after accounting for the survey geometry and integral constraint effects. The dark and light shades represent $1\sigma$ error on the mean and one realization, respectively. Bottom panel shows the residual power spectrum relative to the mean power spectrum. No imaging systematic effects are added to these mocks.}\label{fig:model_mock}
+\includegraphics[width=0.45\textwidth]{model_mock.pdf}
+\caption{The mean power spectrum from the $\fnl=0$ mocks and best fit theoretical prediction after accounting for the survey geometry and integral constraint effects. The dark and light shades represent $1\sigma$ error on the mean and one realization, respectively. Bottom panel shows the residual power spectrum relative to the mean power spectrum. Neither imaging systematic effects nor mitigation are applied to these mocks. \bbk{[Are these contaminated or clean mocks?]}}\label{fig:model_mock}
 \end{figure}
 
 
@@ -63,7 +63,7 @@ The integral constraint is another systematic effect which is induced because th
 The lognormal simulations are used to validated our modeling pipeline. Figure \ref{fig:model_mock} shows the mean power spectrum of 1000 simulations (dashed) and the best fit theory prediction before and after accounting for the survey mask and integral constraint. The light and dark shades represent the 68\% error on the mean and one single realization, respectively. The DESI mask is applied to the simulations, and even though the mask covers around $40\%$ of the sky, but the survey window effect is affecting the clustering power on $\ell < 200$. On the other hand, the integral constraint only modulates the clustering power on $\ell < 6$.
 
 \subsection{Parameter estimation}
-Our parameter inference uses standard Monte-Carlo Markov Chain (MCMC) sampling, as implemented in \textsc{emcee} \citep{2013PASP..125..306F}. Our MCMC allows $\fnl$, $N_{\rm shot}$, and $b$ to vary, but all other cosmological parameters are fixed at the fiducial values (see \S \ref{ssec:mocks}). For the linear bias, a constant clustering amplitude is assumed for our sample, $b(z) = b/D(z)$, and fit for b. Throughout this manuscript, we use a discrete set of bandpower bins with $\Delta\ell=2$ between $\ell=2$ and $20$ and $\Delta \ell=10$ from $\ell=20$ to $300$. Each mode is weighted by $2\ell+1$. 
+Our parameter inference uses standard Monte-Carlo Markov Chain (MCMC) sampling, as implemented in \textsc{emcee} \citep{2013PASP..125..306F}. Our MCMC allows $\fnl$, $N_{\rm shot}$, and $b$ to vary, but all other cosmological parameters are fixed at the fiducial values (see \S \ref{ssec:mocks}). For the linear bias, a constant clustering amplitude is assumed for our sample, $b(z) = b/D(z)$, and fit for b. \mr{Throughout this manuscript, the galaxy power spectrum is aggregated using a discrete set of bandpower bins with $\Delta\ell=2$ between $\ell=2$ and $20$ and $\Delta \ell=10$ from $\ell=20$ to $300$. Each mode is weighted by $2\ell+1$ when averaging over the modes in each bin.} 
 
 We find that the distribution of power spectra at the lowest bin, $2\leq \ell < 4$, is asymmetric and its standard deviation varies significantly from the simulations with $\fnl=0$ to those with $76.9$ (Figure \ref{fig:histcell}). Therefore, we attempt to fit $\log C_{\ell}$ to make our $\fnl$ constraints less sensitive to the choice of covariance matrix. The parameter $\fnl$ is constrained by minimizing a negative likelihood defined as,
 \begin{equation}
@@ -73,7 +73,7 @@ where $\Theta$ represents a container for the parameters $\fnl$, $b$, and $N_{\r
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{hist_cl.pdf}
+\includegraphics[width=0.45\textwidth]{hist_cl.pdf}
 \caption{The distribution of the first bin power spectra and its log transformation from the simulations with $\fnl=0$ (left) and $76.92$ (right). The log transformation alleviates the asymmetry in the distributions.}\label{fig:histcell}
 \end{figure}
 
@@ -85,14 +85,14 @@ In the absence of systematic effects, a) the mean galaxy density should be unifo
 
 \begin{figure*}
 \centering
-\includegraphics[width=0.76\textwidth]{clx_mocks.pdf}
-\caption{The cross power spectra between the DR9 LRG sample and imaging maps. The dark and light shades represent the $97.5$ percentile of 1000 lognormal mocks without and with PNG, respectively.}\label{fig:clxmock}
+\includegraphics[width=0.95\textwidth]{clx_mocks.pdf}
+\caption{The cross power spectra between the DR9 LRG sample and imaging systematic maps. The dark and light shades represent the $97.5$ percentile of 1000 lognormal mocks without and with PNG, respectively.}\label{fig:clxmock}
 \end{figure*}
 
 \begin{figure*}
 \centering
-\includegraphics[width=0.76\textwidth]{nbar_mocks.pdf}
-\caption{The mean galaxy density contrast of the DR9 LRG sample as a function of imaging maps. The dark and light shades represent the $1\sigma$ dispersion of 1000 lognormal mocks without and with PNG, respectively.}\label{fig:nbarmock}
+\includegraphics[width=0.95\textwidth]{nbar_mocks.pdf}
+\caption{The mean density contrast of the DESI LRG targets as a function of the imaging systematic maps: Galactic extinction (EBV), stellar density (nStar), depth in \textit{grzw1} (depth$_{grzw1}$), and seeing in \textit{grz} (psfsize$_{grz}$). The black curves display the results before imaging systematic correction. The red, blue and orange curves represent the relationships after applying the imaging weights from the linear models trained with \textit{all maps}, \textit{conservative I}, and \textit{conservative II}. The green and pink curves display the results after applying the imaging weights from the nonlinear models trained with \textit{conservative II} and \textit{conservative II+nStar}. The dark and light shades represent the $1\sigma$ dispersion of 1000 lognormal mocks with $\fnl=0$ and $76.92$, respectively.}\label{fig:nbarmock}
 \end{figure*}
 
 
@@ -100,13 +100,13 @@ In the absence of systematic effects, a) the mean galaxy density should be unifo
 \raggedleft
 \includegraphics[width=0.45\textwidth]{chi2test.pdf}
 \includegraphics[width=0.44\textwidth]{chi2test2.pdf}
-\caption{The remaining systematic error $\chi^{2}$ from the galaxy-imaging cross power spectrum (top) and the mean galaxy density contrast (bottom). The values observed in the DR9 LRG sample before and after linear and nonlinear treatments are quoted, and the histograms are constructed from 1000 realizations of clean lognormal mocks with $\fnl=0$ and $76.92$.}\label{fig:chi2test}
+\caption{The remaining systematic error $\chi^{2}$ from the galaxy-imaging cross power spectrum (top) and the mean galaxy density contrast (bottom). The values observed in the DR9 LRG sample before and after linear and nonlinear treatments are quoted, and the histograms are constructed from 1000 realizations of clean lognormal mocks with $\fnl=0$ and $76.92$. \mr{Alex: can you show the DR9 chi2s as vertical lines rather than as text?}}\label{fig:chi2test}
 \end{figure}
 
 
 \subsubsection{Cross power spectrum}
 
-We calculate the cross power spectra between the galaxy density contrast and imaging maps,
+We calculate the cross power spectra between the galaxy density contrast and imaging systematic maps \bbk{[Could we call them something else here (maybe contaminant maps)? I first got confused and thought you were cross-correlating redshift slices in your imaging survey, but maybe our readers will read more carefully than me]},
 \begin{equation}
 \tilde{C}_{X, \ell} = [\tilde{C}_{x_{1}, \ell}, \tilde{C}_{x_{2}, \ell}, \tilde{C}_{x_{3}, \ell}, ..., \tilde{C}_{x_{9}, \ell}],
 \end{equation}
@@ -118,11 +118,11 @@ Then, the $\chi^{2}$ value for the cross power spectra is calculated via,
 \begin{equation}
 \chi^{2} = \tilde{C}^{T}_{X, \ell} \mathbb{C}_{X}^{-1} \tilde{C}_{X, \ell},
 \end{equation}
-where the covariance matrix $\mathbb{C}_{X} = < \tilde{C}_{X, \ell} \tilde{C}_{X, \ell'} >$ is constructed from the lognormal mocks. This $\chi^{2}$ error is measured for every mock realization with the \textit{leave-one-out} technique\footnote{999 realizations are used to estimate the covariance matrix and applied to measure the $\chi^{2}$ for the left-out realization.}, and then is compared to the $\chi^{2}$ value observed from the DR9 LRGs. We only include the bandpower bins from $\ell=2$ to $20$ with $\Delta\ell=2$, although later higher $\ell$ modes are considered as well for a robustness test. 
+where the covariance matrix $\mathbb{C}_{X} = < \tilde{C}_{X, \ell} \tilde{C}_{X, \ell'} >$ is constructed from the lognormal mocks. This $\chi^{2}$ error is measured for every mock realization with the \textit{leave-one-out} technique\footnote{999 realizations are used to estimate the covariance matrix and applied to measure the $\chi^{2}$ for the left-out realization.}\bbk{[Can you elaborate a more what you mean by that?]}, and then is compared to the $\chi^{2}$ value observed from the DR9 LRGs. We only include the bandpower bins from $\ell=2$ to $20$ with $\Delta\ell=2$, and test for the robustness with higher $\ell$ modes in Appendix \ref{sec:scalesys}. 
 
-Figure \ref{fig:clxmock} shows $\tilde{C}_{X}$ from the DR9 LRG sample before and after applying various corrections for imaging systematics. The dark and light shades show the 97.5$^{\rm th}$ percentile from the $\fnl=0$ and $76.9$ mocks, respectively. The LRG sample has the highest cross correlation against extinction, stellar density, and the z-band depth (solid black curve). As the most conservative cleaning approach, a linear model is trained with the extinction and z-band depth maps (\textit{linear conservative I}). With the correction applied, we find that the cross power spectrum against the r-band psftsize increases (dot-dashed blue curve), which indicates that only extinction and depth in the z-band are not sufficient to regress out all of the residual cross correlations between the LRG density and imaging. With the linear model re-trained using the three maps (\textit{linear conservative II}), we are able to reduce the cross power spectra (dotted orange curve). For comparison, we also show the cross spectra for a case in which the DR9 is cleaned using the linear model trained with all imaging maps (dashed red curve). There are minor differences between the \textit{linear conservative II} and \textit{linear all maps} cross spectra, further supporting the idea that only three imaging maps are sufficient to regress out spurious correlations.
+Figure \ref{fig:clxmock} shows $\tilde{C}_{X}$ from the DR9 LRG sample before and after applying various corrections for imaging systematics. The dark and light shades show the 97.5$^{\rm th}$ percentile from the $\fnl=0$ and $76.9$ mocks, respectively. The LRG sample has the highest cross correlation against extinction, stellar density, and the z-band depth (solid black curve). As the most conservative cleaning approach, a linear model is trained with the extinction and z-band depth maps (\textit{linear conservative I}). With the correction applied, we find that the cross power spectrum against the r-band psftsize increases (dot-dashed blue curve), which indicates that only extinction and depth in the z-band are not sufficient to regress out all of the residual cross correlations between the LRG density and imaging. With the linear model re-trained using the three maps (\textit{linear conservative II}), we are able to reduce the cross power spectra (dotted orange curve). For comparison, we also show the cross spectra for a case in which the DR9 is cleaned using the linear model trained with all imaging systematic maps (dashed red curve). There are minor differences between the \textit{linear conservative II} and \textit{linear all maps} cross spectra, further supporting the idea that only three imaging systematic maps are sufficient to regress out spurious correlations.
 
-Figure \ref{fig:chi2test} (top) shows the histogram of the cross spectrum $\chi^{2}$ from 1000 mocks with and without $\fnl$. The $\chi^{2}$ values observed in the DR9 LRG sample are quoted for comparison. Before cleaning, our LRG sample has a cross power spectrum $\chi^{2}$ error of $20014.8$. After correction with the linear conservative I approach, the cross spectrum $\chi^{2}$ is reduced to $375.1$ with p-value $=0.002$. Adding the r-band psfsize, the linear model reduces the $\chi^{2}$ down to $195.9$ with p-value $=0.044$; we can reject the null hypothesis that the DR9 sample with the linear conservative II is properly cleaned at $95\%$ confidence. Although training the linear model with all imaging maps as input gives the lowest cross spectrum $\chi^{2}$ of $129.2$ (and p-value $=0.239$), but it potentially makes the analysis more prone to over-fitting and regressing out the true clustering signal, given the inner correlations among the imaging properties (Figure \ref{fig:pcc}). As an alternative, we train the nonlinear method with the extinction, z-band depth, and r-band psfsize maps (\textit{nonlinear conservative II}) and clean our sample. The cross power spectrum $\chi^{2}$ is reduced to $79.3$ with p-value $=0.594$.  Adding the stellar density map reduces the cross power spectrum $\chi^{2}$ error to $70.9$ (p-value $=0.687$). This cross power spectrum diagnostic supports the idea that a nonlinear cleaning approach is needed to properly regress out the remaining spurious fluctuations. We investigate the test with the cross power spectrum up to higher multipoles but find no evidence of remaining systematic errors (see Appendix \ref{sec:scalesys}). 
+Figure \ref{fig:chi2test} (top) \bbk{[Figure 7 hasn't been discussed yet]} shows the histogram of the cross spectrum $\chi^{2}$ from 1000 mocks with and without $\fnl$. The $\chi^{2}$ values observed in the DR9 LRG sample are quoted for comparison. Before cleaning, our LRG sample has a cross power spectrum $\chi^{2}$ error of $20014.8$. After correction with the linear conservative I approach, the cross spectrum $\chi^{2}$ is reduced to $375.1$ with p-value $=0.002$. Adding the r-band psfsize, the linear model reduces the $\chi^{2}$ down to $195.9$ with p-value $=0.044$; we can reject the null hypothesis that the DR9 sample with the linear conservative II is properly cleaned at $95\%$ confidence. Although training the linear model with all imaging systematic maps as input gives the lowest cross spectrum $\chi^{2}$ of $129.2$ (and p-value $=0.239$), but it potentially makes the analysis more prone to over-fitting and regressing out the true clustering signal, given the inner correlations among the imaging properties (Figure \ref{fig:pcc}). As an alternative, we apply the imaging weights from the nonlinear method with the extinction, z-band depth, and r-band psfsize maps (\textit{nonlinear conservative II}). The cross power spectrum $\chi^{2}$ is reduced to $79.3$ with p-value $=0.594$.  Adding the stellar density map reduces the cross power spectrum $\chi^{2}$ error to $70.9$ (p-value $=0.687$). Our cross power spectrum diagnostic supports the idea that a nonlinear cleaning approach is needed to properly regress out the remaining spurious fluctuations. We investigate the test with the cross power spectrum up to higher multipoles but find no evidence of remaining systematic errors (see Appendix \ref{sec:scalesys}). 
 
 \subsubsection{Mean density contrast}
 We calculate the histogram of the mean density contrast relative to the $j^{\rm th}$ imaging property:
@@ -137,10 +137,11 @@ and the total residual error as,
 \begin{equation}
 \chi^{2} = \delta_{X}^{T} \mathbb{C_{\delta}}^{-1} \delta_{X},
 \end{equation}
-where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DR9 LRG sample. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.92$. The DR9 LRG sample before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however,  a new trend appears against the r-band psfsize map with the \textit{linear conservative I} approach (dot-dashed blue curve), which is indicative of the psfsize-related systematics in our sample. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps identified as \textit{conservative II}, but we still observe around $2\%$ residual spurious fluctuations in the low end of the z-band depth, which implies nonlinear systematic effects exist. We find that the nonlinear model trained with the three identified maps (or four maps including the stellar density) is capable of reducing the fluctuations below $2\%$. We experiment with different binning schemes but find consistent results.
+where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DR9 LRG sample. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.92$. The DR9 LRG sample before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however,  a new trend appears against the r-band psfsize map with the \textit{linear conservative I} approach (dot-dashed blue curve), which is indicative of the psfsize-related systematics in our sample. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps identified as \textit{conservative II}, but we still observe around $2\%$ residual spurious fluctuations in the low end of the z-band depth, which implies nonlinear systematic effects exist. We find that the imaging weights from the nonlinear model trained with the three identified maps (or four maps including the stellar density) is capable of reducing the fluctuations below $2\%$. We experiment with different binning schemes but find consistent results.
 
+Figure \ref{fig:chi2test} (bottom) shows the mean density $\chi^{2}$ observed in the mocks with or without $\fnl$. We find consistent results regardless of the underlying $\fnl$, which supports that our diagnostic is not sensitive to the fiducial cosmology. The values measured in the DR9 LRG sample before and after applying imaging weights are quoted for comparison. The \textit{linear conservative I} weights reduce the $\chi^{2}$ value from $679.8$ (before correction) to $178.8$. The p-value $=0$ indicates severe remaining systematic effects. Adding the r-band psfsize does not reduce the p-value enough (e.g., greater than $0.05$) even though the cleaning method yields a lower $\chi^{2}=130$. Training the linear model with all imaging systematic maps returns a more reasonable $\chi^{2}=90$ and p-value of $0.084$; however, regression with all imaging systematic maps as input can lead to the removal of the true clustering signal. With the imaging weights from the \textit{nonlinear conservative II} approach, we obtain a $\chi^{2}$ value of $74.3$ with p-value $=0.392$. Re-training the nonlinear approach while adding the stellar density map (\textit{nonlinear conservative II+nStar}) yields minor improvement: $\chi^{2}=73.2$ and p-value $=0.422$.  This indicates that the stellar density trend in the mean LRG density can be explained via the extinction map.
 
-Figure \ref{fig:chi2test} (bottom) shows the mean density $\chi^{2}$ observed in the mocks with or without $\fnl$. We find consistent results regardless of the underlying $\fnl$, which supports that our diagnostic is not sensitive to the fiducial cosmology. The values measured in the DR9 LRG sample before and after applying imaging weights are quoted for comparison. The \textit{linear conservative I} weights reduce the $\chi^{2}$ value from $679.8$ (before correction) to $178.8$. The p-value $=0$ indicates severe remaining systematic effects. Adding the r-band psfsize does not reduce the p-value enough (e.g., greater than $0.05$) even though the cleaning method yields a lower $\chi^{2}=130$. Training the linear model with all imaging maps returns a more reasonable $\chi^{2}=90$ and p-value of $0.084$; however, regression with all imaging maps as input can lead to the removal of the true clustering signal. We try the \textit{nonlinear conservative II} approach. We obtain a $\chi^{2}$ value of $74.3$ with p-value $=0.392$. Re-training the nonlinear approach while adding the stellar density map yields minor improvement: $\chi^{2}=73.2$ and p-value $=0.422$.  This indicates that the stellar density trend in the mean LRG density can be explained via the extinction map.
+\mr{Supported by our remaining systematic test, \textit{nonlinear conservative II} is therefore chosen as our default approach, and is applied to the mocks contaminated with linear systematics to calibrate the $\fnl$ biases induced by over correction.}
 
 
 \subsection{Calibration of mitigation bias}\label{ssec:calibration}
@@ -149,12 +150,12 @@ The template-based mitigation of imaging systematics removes some of the true cl
 \begin{figure}
 \centering
 \includegraphics[width=0.45\textwidth]{figures/fnlbias}
-\caption{The true vs measured $\fnl$ values from the $\fnl=0$ and $76.9$ mocks. The solid (dashed) lines represent the best fit estimates from fitting the mean power spectrum of the clean (contaminated) mocks. The scatter points show the best fit estimates from fitting the individual spectra for the clean mocks.}\label{fig:fnlbias}
+\caption{The \textit{No mitigated, clean} vs \textit{mitigated} $\fnl$ values from the $\fnl=0$ and $76.9$ mocks. The solid (dashed) lines represent the best fit estimates from fitting the mean power spectrum of the clean (contaminated) mocks. The scatter points show the best fit estimates from fitting the individual spectra for the clean mocks.}\label{fig:fnlbias}
 \end{figure}
 
-To calibrate for over-correction, we utilize our series of lognormal density fields with and without PNG, with and without systematic effects. The contamination model is based on the linear multivariate approach with the extinction, z-band depth, and r-band psfsize maps as input and parameters drawn from the likelihood constrained by the DR9 LRG sample. The idea is to simulate systematic effects that reflect spurious fluctuations as  realistic as the DR9 LRG sample. For correction, the neural network model is trained and applied to the simulations with various sets of imaging maps as input. Particularly, we consider \textit{nonlinear conservative II}, \textit{nonlinear conservative II + nStar}, and \textit{nonlinear All Maps + nStar}. We fit both the mean power spectrum and each individual power spectrum of 1000 realizations. The best fit estimates from the mocks without systematics (and no mitigation applied) are considered as the true $\fnl$ values and the estimates from the mocks (with the mitigation procedure applied) are considered as the measured $\fnl$ values. Figure \ref{fig:fnlbias} shows the true $\fnl$ values and the measured $\fnl$ values from fitting the mean power spectrum (solid lines) and individual spectra (points). The dashed lines show the best fit estimates from the contaminated realizations. The best fit estimates for the contaminated mocks before cleaning (\textit{no weight}) or per realizations are not shown for visual clarity. 
+To calibrate for over-correction, we utilize our series of lognormal density fields with and without PNG, with and without systematic effects. The contamination model is based on the linear multivariate approach with the extinction, z-band depth, and r-band psfsize maps as input and parameters drawn from the likelihood constrained by the DR9 LRG sample. The idea is to simulate systematic effects that reflect spurious fluctuations as  realistic as the DR9 LRG sample. For correction, the neural network model is trained and applied to the simulations with various sets of imaging systematic maps as input. Particularly, we consider \textit{nonlinear conservative II}, \textit{nonlinear conservative II + nStar}, and \textit{nonlinear All Maps + nStar}. We fit both the mean power spectrum and each individual power spectrum of 1000 realizations. The best fit estimates from the mocks without systematics (and no mitigation applied) are considered as the true $\fnl$ values and the estimates from the mocks (with the mitigation procedure applied) are considered as the measured $\fnl$ values. Figure \ref{fig:fnlbias} shows the true $\fnl$ values and the measured $\fnl$ values from fitting the mean power spectrum (solid lines) and individual spectra (points). The dashed lines show the best fit estimates from the contaminated realizations. The best fit estimates for the contaminated mocks before cleaning (\textit{no weight}) or per realizations are not shown for visual clarity. 
 
-Then, a pair of linear parameter are found to map the measured values to the true values, $f_{\rm NL, true} = m_{1} f_{\rm NL, measured} + m_{2}$. These $m_{1}$ and $m_{2}$ coefficients for the mean power spectrum are summarized in Table \ref{tab:debiasparams}. The coefficients for the \textit{All Maps+nStar} approach are the highest, as more mitigation bias is expected if more imaging maps are used. We find that $m_{1}-1$ determines the added uncertainty in the $\fnl$ constraints, once the correction coefficients are applied. We expect this effect to be maximum for \textit{All Maps+nStar} and minimum for \textit{Conservative II}.
+Then, a pair of linear parameter are found to map the measured values to the true values, $f_{\rm NL, true} = m_{1} f_{\rm NL, measured} + m_{2}$. These $m_{1}$ and $m_{2}$ coefficients for the mean power spectrum are summarized in Table \ref{tab:debiasparams}. The coefficients for the \textit{All Maps+nStar} approach are the highest, as more mitigation bias is expected if more imaging systematic maps are used. We find that $m_{1}-1$ determines the added uncertainty in the $\fnl$ constraints, once the correction coefficients are applied. We expect this effect to be maximum for \textit{All Maps+nStar} and minimum for \textit{Conservative II}.
 
 \begin{table}
 \begin{center}
