--- a/refs.bib
+++ b/refs.bib
@@ -1163,3 +1163,41 @@ archivePrefix = {arXiv},
     url = {https://doi.org/10.1093/mnras/248.1.1},
     eprint = {https://academic.oup.com/mnras/article-pdf/248/1/1/18194814/mnras248-0001.pdf},
 }
+
+@ARTICLE{2021JCAP...11..027B,
+       author = {{Bahr-Kalus}, Benedict and {Bertacca}, Daniele and {Verde}, Licia and {Heavens}, Alan},
+        title = "{The Kaiser-Rocket effect: three decades and counting}",
+      journal = {\jcap},
+     keywords = {cosmological parameters from LSS, power spectrum, inflation, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2021,
+        month = nov,
+       volume = {2021},
+       number = {11},
+          eid = {027},
+        pages = {027},
+          doi = {10.1088/1475-7516/2021/11/027},
+archivePrefix = {arXiv},
+       eprint = {2107.00351},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021JCAP...11..027B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Wang2019,
+       author = {{Wang}, Mike Shengbo and {Percival}, Will J. and {Avila}, Santiago and {Crittenden}, Robert and {Bianchi}, Davide},
+        title = "{Cosmological inference from galaxy-clustering power spectrum: Gaussianization and covariance decomposition}",
+      journal = {\mnras},
+     keywords = {methods: data analysis, methods: statistical, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2019,
+        month = jun,
+       volume = {486},
+       number = {1},
+        pages = {951-965},
+          doi = {10.1093/mnras/stz829},
+archivePrefix = {arXiv},
+       eprint = {1811.08155},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.486..951W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
