--- a/sections/acknowledgement.tex
+++ b/sections/acknowledgement.tex
@@ -1,5 +1,5 @@
 \section*{Acknowledgements}
-MR is supported by XXXXXX. We would like to thank Eva Mueller, Will Percival, Tanveer Karim, and Sukhdeep Singh for helpful discussions. MR is thankful for hospitality at the OSU CCAPP in particular facilitated by John Beacom and Lisa Colarosa. We acknowledge the support and resources from the Ohio Supercomputer Center \citep[OSC;][]{OhioSupercomputerCenter1987}. We would like to thank the open-source software and resources that has helped this research: Pytorch, Nbodykit, HEALPix, Fitsio, Scikit-Learn, NumPy, SciPy, Pandas, IPython, Jupyter, and GitHub. This research has made use of the arXiv preprint server and NASA’s Astrophysics Data System.
+MR is supported by XXXXXX. We would like to thank Tanveer Karim and Sukhdeep Singh for helpful discussions. MR would like to thank CCAPP, in particular, John Beacom and Lisa Colarosa, for their hospitality and sponsorship. We acknowledge the support and resources from the Ohio Supercomputer Center \citep[OSC;][]{OhioSupercomputerCenter1987}. We would like to thank the open-source software and resources that has helped this research: Pytorch, Nbodykit, HEALPix, Fitsio, Scikit-Learn, NumPy, SciPy, Pandas, IPython, Jupyter, and GitHub. This research has made use of the arXiv preprint server and NASA’s Astrophysics Data System.
 
 
 This research is supported by the Director, Office of Science, Office of High Energy Physics of the U.S. Department of Energy under Contract No. DE–AC02–05CH11231, and by the National Energy Research Scientific Computing Center, a DOE Office of Science User Facility under the same contract; additional support for DESI is provided by the U.S. National Science Foundation, Division of Astronomical Sciences under Contract No. AST-0950945 to the NSF’s National Optical-Infrared Astronomy Research Laboratory; the Science and Technologies Facilities Council of the United Kingdom; the Gordon and Betty Moore Foundation; the Heising-Simons Foundation; the French Alternative Energies and Atomic Energy Commission (CEA); the National Council of Science and Technology of Mexico (CONACYT); the Ministry of Science and Innovation of Spain (MICINN), and by the DESI Member Institutions.
