--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -1,8 +1,8 @@
 \section{Conclusions}\label{sec:conclusion}
-We have presented constraints on the local primordial non-Gaussianity parameter $\fnl$ from the angular power spectrum of LRGs from the DESI imaging DR9. We infer the redshift distribution of LRGs from early spectroscopy during DESI Survey Validation. The data set covers around 14,000 square degrees in the redshift range of 0.2< z < 1.1. Our analysis utilizes the scale-dependent bias effect that primarily comes from large scales; thus, it is sensitive to systematic errors caused by photometric calibration issues, survey depth variations, and Milky Way foregrounds. 
+We have presented constraints on the local primordial non-Gaussianity parameter $\fnl$ from the angular power spectrum of LRGs from the DESI imaging DR9. We infer the redshift distribution of LRGs from early spectroscopy during DESI Survey Validation (Figure \ref{fig:nz}). The data set covers around 14,000 square degrees in the redshift range of $0.2< z < 1.35$. Our analysis utilizes the scale-dependent bias effect that primarily comes from large scales; thus, it is very sensitive to systematic errors caused by photometric calibration issues, survey depth variations, and Milky Way foregrounds (Figure \ref{fig:ng}). 
 
-We use the FFTLog algorithm to model the angular clustering on large scales. We simulate lognormal density fields with similar angular and redshift distributions to validate the pipeline, estimate covariance matrices, and characterize remaining systematic errors. Our mock test reveals that the distribution of power spectra on large scales is asymmetric. We demonstrate our analysis can benefit from fitting the log transformation of the power spectrum. 
+We use the FFTLog algorithm to model the angular clustering on large scales or multipoles as low as $\ell=2$ (Figure \ref{fig:model_mock}). We simulate lognormal density fields with DESI-like LRG angular and redshift distributions to validate the pipeline, estimate covariance matrices, and characterize remaining systematic errors. Our mock test reveals that the distribution of power spectra on large scales is asymmetric (Figure \ref{fig:histcell}). We demonstrate our likelihood inference benefits from fitting the log transformation of the power spectrum. 
 
-Multivariate linear and neural network-based regression models are applied to regress out spurious fluctuations in the LRG density field against various maps for the extinction, survey depth, astronomical seeing, neural hydrogen column density, and stellar density. Feature selection uses the Pearson correlation and the Spearman correlation coefficients to reduce the likelihood of over-correction, i.e., removing the clustering signal. The LRG density map is cross-correlated against the imaging maps. We quantify the remaining systematic fluctuations using the mean density and cross-power spectrum and run null tests against lognormal density fields. Our simulation-based tests reveal that the DR9 LRG sample with linear correction suffers from remaining systematic error primarily due to depth variations. We observe that the nonlinear mitigation approach reduces the excess clustering signal more effectively. We identify the extinction, z-band depth, and r-band seeing as the primary sources of systematic error. 
+Multivariate linear and neural network-based regression models are applied to regress out spurious fluctuations in the LRG density field against various maps for the extinction, survey depth, astronomical seeing, neural hydrogen column density, and stellar density. Feature selection uses the Pearson correlation and the Spearman correlation coefficients to reduce the likelihood of over-correction, i.e., removing the clustering signal (Figure \ref{fig:pcc}). The LRG density map is cross-correlated against the imaging systematic maps (Figure \ref{fig:clxmock}), and the mean LRG density is calculated for different regions with similar imaging to look for systematic trends in the mean density (Figure \ref{fig:nbarmock}). We quantify the remaining systematic fluctuations using the mean density and cross-power spectrum and run null tests against lognormal density fields (Figure \ref{fig:chi2test}). Our simulation-based tests reveal that the DR9 LRG sample with linear correction suffers from remaining systematic error primarily due to depth variations. We observe that the nonlinear mitigation approach reduces the excess clustering signal more effectively. We identify the extinction, z-band depth, and r-band seeing as the primary sources of systematic error. 
 
-We apply our cleaning methods to the lognormal mocks with and without PNG, with and without systematic effects, to calibrate the level of mitigation biases introduced in our constraints. With this conservative set of maps, we obtain values inconsistent with zero at more than $95\%$ confidence. Adding a template for local stellar density does not change the limits for our conservative approaches. However, using all imaging maps and stellar density yields an asymmetric likelihood distribution with larger uncertainty. Overall, our nonlinear cleaning methods return consistent maximum likelihood estimates of $\fnl \sim 47-50$. Assuming Planck's measurement is accurate a priori, our results indicate some unknown systematic error. Our results suggest a follow-up investigation of stellar contamination and depth-related variations in the spectroscopic sample of DESI LRGs. A second source of theoretical uncertainty is that our analysis considers the halo bias depends on halo mass only. So, a better characterization of observational uncertainties, coupled with more simulation-based studies of halo-assembly bias, is crucial to constrain local primordial non-Gaussianity with large-scale structure.
+We apply our cleaning methods to the lognormal mocks with and without PNG, with and without systematic effects, to calibrate the level of mitigation biases introduced in our constraints (Table \ref{tab:debiasparams} and Figure \ref{fig:fnlbias}). With the conservative set of maps, we obtain best fit estimates which are inconsistent with zero at more than $95\%$ confidence. Adding local stellar density to the list of maps used for cleaning does not influence the constraints obtained from our conservative approaches. However, using the combination of all imaging systematic maps and stellar density yields an asymmetric likelihood distribution with larger uncertainty and consistent with $\fnl=0$ at $95\%$ confidence (Table \ref{tab:dr9methodcalib}). \mr{This is interesting as the same covariance matrix is used for all; but we find that the \textit{nonlinear all maps+nstar} approach introduces a larger bias by having a larger multiplicative parameter, $m_{1}$, Table \ref{tab:debiasparams}.} Overall, our nonlinear cleaning methods return consistent best fit estimates of $\fnl \sim 47-50$ (Figure \ref{fig:mcmc_dr9}). We run multiple robustness tests but find no significant changes other than that there is spurious correlation against stellar density in the NGC and potential calibration issues in the SGC below DEC$< -30$ (Table \ref{tab:dr9method}). Our constraints are consistent with each other when each imaging region is fit separately and/or the lowest mode used is increased (Figure \ref{fig:mcmc_dr9reg} and Figure \ref{fig:mcmc_dr9elmin}). Assuming Planck's measurement of $\fnl$ is accurate a priori, our results indicate some unknown calibration error. Our results also suggest follow-up investigations of stellar contamination and depth-related variations in the spectroscopic sample of DESI LRGs. \mr{Hui: cite LRG redshift success rate, stellar contamination rate. Noting possible improvements when we have all spectra data available.} On the other hand, calibrating simulations for the over correction effect might not be feasible for DESI spectroscopy. So, a simulation based forward model approach for estimating the imaging weights can become helpful to reduce the dimensionality of the imaging parameter space. We leave the idea of combining the forward-modeling and backward-modeling cleaning approaches to future work. Another source of theoretical uncertainty is that our analysis considers the halo bias depends on halo mass only, which is shown to be a naive assumption; improving the methods for handling imaging systematics and calibrating the uncertainties around halo assembly bias, together, will enable us to derive reliable, accurate, and precise $\fnl$ results.
